force-app/main/default/objects/Contact/fields/Account_ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>Account_ServiceProvider__c</fullName>
    <formula>TEXT(Account.Service_provider__c) == &apos;3&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_ServiceProvider</label>
    <type>Checkbox</type>
</CustomField>