force-app/main/default/objects/Contact/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מורשה חתימה</fullName>
            </value>
            <value>
                <fullName>מקבל החלטות</fullName>
            </value>
            <value>
                <fullName>יועץ</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>