force-app/main/default/objects/Contact/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <length>128</length>
    <type>Text</type>
</CustomField>