force-app/main/default/objects/Contact/fields/Mailing_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Mailing_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing confirmation</label>
    <type>Checkbox</type>
</CustomField>