force-app/main/default/objects/Contact/fields/Other_Department__c.field-meta.xml
<CustomField>
    <fullName>Other_Department__c</fullName>
    <description>מחלקה- אחר</description>
    <label>Other Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>