force-app/main/default/objects/Contact/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>