force-app/main/default/objects/Contact/listViews/Contacts_Totay_created.listView-meta.xml
<ListView>
    <fullName>Contacts_Totay_created</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.District__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Contacts - Totay created</label>
</ListView>